# AutoTest_EyeSDK

./: CMakeLists.txt
CameraFirmwareTools/: NX.CamType  RK.CamType  main.py  ubuntu18.CamType  固件升降级工具使用说明.docx
CameraFirmwareTools/Func_Design/: thread_rewrite.py  ubuntu_ssh.py
CameraFirmwareTools/UI_Design/: camera_windows.py
HalconTest/: Mech_Eye_Halcon_Continuous_Test.hdev  README.md
InputParametersSDK_cpp/: CMakeLists.txt  InputPara.cpp  README.md
Nano_PRO_SDK_cpp/: AntiFlicker.cpp  CMakeLists.txt  README.md
ParametersSDK_c++/CaptureSettingTest/: CaptureTest.cpp  PROM_AntiFlickerMode.csv
ParametersSDK_c++/ParameterSettingTest/: CMakeLists.txt  ParameterTest.cpp  log_data_drive.csv
ParametersSDK_c++/include/: AuxiliaryFunction.h  MainFunction.h  readCSV.h
ParametersSDK_cpp/CaptureSettingTest/: CMakeLists.txt  CaptureTest.cpp  README.md
ParametersSDK_cpp/ParameterSettingTest/: CMakeLists.txt  ParameterTest.cpp  README.md  log_data_drive.csv
ParametersSDK_cpp/include/: AuxiliaryFunction.h  CaptureFunction.h  MainFunction.h  ReadCsv.h
SDKPostTools/: main.py
SDKPostTools/ParametersPackag/: find_camera_info.py
SDKPostTools/UIDesign/: process_check_windows.py  single_parameter_window.py
include/: TestFunction.h
parametersSDK_Python/: main_test.py
parametersSDK_Python/Basic/: caminfo.py  captureset.py  paramset.py
parametersSDK_Python/Case/: test_laser_parame.py  test_parameters.py  test_uhp_parameter.py
parametersSDK_Python/Util/: auxiliary.py  datedrive.py
testSDKParameters/: MainTest.cpp  README.md  data.csv
(+8 files in other folders)
